@@ -1,3 +1,15 @@
+2023-12-28 Gabriele Gorla <gorlik@yahoo.com>
+
+	* device/lib/mos6502/_divuchar.s,
+	  device/lib/mos6502/_moduchar.s:
+	  Fix regression failures introduced by r14555
+	* src/mos6502/gen.c,
+	  src/hc08/gen.c,
+	  support/regression/tests/gcc-torture-execute-strlen-4.c:
+	  Fix bug #2987 and enable gcc-torture-execute-strlen-4 for mos6502 and hc08.
+	* src/SDCCicode.c:
+	  Fix small debug print bug.
+
 2023-12-20 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* doc/sdccman.lyx:
